SUBDIRS=src utilities

nobase_dist_pkgdata_DATA= \
images/arrow.png \
images/attack-icon.png \
images/button-active.png \
images/button.png \
images/button-pressed.png \
images/colorCube_color.jpg \
images/compass-rose.png \
images/Concrete_Aggregate_Smoke1.jpg \
images/Concrete_Aggregate_SmokenoCulling.jpg \
images/Concrete_Block_8x8_Gray1.jpg \
images/Concrete_Block_8x8_GraynoCulling.jpg \
images/defend-icon.png \
images/dialog-background.png \
images/fountain1_color.jpg \
images/fountain1_color-Material.jpg \
images/grey-mediumnoCulling.jpg \
images/leaves.png \
images/logo-title-screen.png \
images/maison_cheminee1.jpg \
images/maison_fenetre1.jpg \
images/maison_mur1.jpg \
images/maison_mur2.jpg \
images/maison_mur3.jpg \
images/maison_mur4.jpg \
images/maison_porte1.jpg \
images/maison_toit1.jpg \
images/male-base.jpg \
images/move-icon.png \
images/red.jpg \
images/Stone_Marble1.jpg \
images/Stone_MarblenoCulling.jpg \
images/suzanne.jpg \
images/talin-body.jpg \
images/talin-face.jpg \
images/tan-lightnoCulling.jpg \
images/Wood_Cherry_Original1.jpg \
images/Wood_Cherry_Original.jpg \
images/Wood_Cherry_OriginalnoCulling.jpg \
images/wood.jpg \
\
images/frames/all_about_frames.txt \
images/frames/dialog-all-options.cfg \
images/frames/dialog-message.cfg \
images/frames/dialog-npc-portrait.cfg \
images/frames/dialog-option.cfg \
images/frames/dialog-option-selected.cfg \
images/frames/dialog-pc-portrait.cfg \
images/frames/frame-bl.png \
images/frames/frame-b.png \
images/frames/frame-br.png \
images/frames/frame-l.png \
images/frames/frame-m.png \
images/frames/frame-r.png \
images/frames/frame-tl.png \
images/frames/frame-t.png \
images/frames/frame-tr.png \
images/frames/game-arrow-left-click.png \
images/frames/game-arrow-left-disable.png \
images/frames/game-arrow-left-hover.png \
images/frames/game-arrow-left-normal.png \
images/frames/game-arrow-right-click.png \
images/frames/game-arrow-right-disable.png \
images/frames/game-arrow-right-hover.png \
images/frames/game-arrow-right-normal.png \
images/frames/game-bar-char-scroll-left-frame.cfg \
images/frames/game-bar-char-scroll-left-skin-clicked.cfg \
images/frames/game-bar-char-scroll-left-skin-disabled.cfg \
images/frames/game-bar-char-scroll-left-skin-highlighted.cfg \
images/frames/game-bar-char-scroll-left-skin-normal.cfg \
images/frames/game-bar-char-scrollpane-frame.cfg \
images/frames/game-bar-char-scroll-right-frame.cfg \
images/frames/game-bar-char-scroll-right-skin-clicked.cfg \
images/frames/game-bar-char-scroll-right-skin-disabled.cfg \
images/frames/game-bar-char-scroll-right-skin-highlighted.cfg \
images/frames/game-bar-char-scroll-right-skin-normal.cfg \
images/frames/game-bar-frame.cfg \
images/frames/game-bar-game-button-skin-clicked.cfg \
images/frames/game-bar-game-button-skin-depressed.cfg \
images/frames/game-bar-game-button-skin-depressed-highlighted.cfg \
images/frames/game-bar-game-button-skin-highlighted.cfg \
images/frames/game-bar-game-button-skin-normal.cfg \
images/frames/game-bar-game-menu-frame.cfg \
images/frames/game-bar-game-menu-option-frame.cfg \
images/frames/game-bar-game-menu-option-text-frame.cfg \
images/frames/game-bar-game-menu-skin-clicked.cfg \
images/frames/game-bar-game-menu-skin-disabled.cfg \
images/frames/game-bar-game-menu-skin-highlighted.cfg \
images/frames/game-bar-game-menu-skin-normal.cfg \
images/frames/game-bar-party-button-skin-clicked.cfg \
images/frames/game-bar-party-button-skin-depressed.cfg \
images/frames/game-bar-party-button-skin-highlighted.cfg \
images/frames/game-bar-party-button-skin-normal.cfg \
images/frames/game-bar-party-button-text.cfg \
images/frames/game-bar.png \
images/frames/game-bar-portrait-frame.cfg \
images/frames/game-bar-portrait-menu-frame.cfg \
images/frames/game-bar-portrait-menu-skin-clicked.cfg \
images/frames/game-bar-portrait-menu-skin-disabled.cfg \
images/frames/game-bar-portrait-menu-skin-highlighted.cfg \
images/frames/game-bar-portrait-menu-skin-normal.cfg \
images/frames/game-bar-portrait-option-frame.cfg \
images/frames/game-bar-portrait-option-text-frame.cfg \
images/frames/game-bar-portrait-skin-normal.cfg \
images/frames/game-bar-portrait-skin-rolledover.cfg \
images/frames/game-main-normal.png \
images/frames/game-main-selected.png \
images/frames/game-menu-96-back.png \
images/frames/game-menu-96-normal.png \
images/frames/game-menu-96-select.png \
images/frames/game-party-normal.png \
images/frames/game-party-selected.png \
images/frames/game-portrait-normal-f.png \
images/frames/game-portrait-selected-f.png \
images/frames/game-portrait-selected-m.png \
images/frames/mini-char-battle-stats.cfg \
images/frames/save-dialog-cancel-button-frame.cfg \
images/frames/save-dialog-cancel-button-skin-clicked.cfg \
images/frames/save-dialog-cancel-button-skin-highlighted.cfg \
images/frames/save-dialog-cancel-button-skin-normal.cfg \
images/frames/save-dialog-frame.cfg \
images/frames/save-dialog-ok-button-frame.cfg \
images/frames/save-dialog-ok-button-skin-clicked.cfg \
images/frames/save-dialog-ok-button-skin-highlighted.cfg \
images/frames/save-dialog-ok-button-skin-normal.cfg \
images/frames/save-dialog-text-frame.cfg \
images/frames/save-dialog-text-skin-highlighted.cfg \
images/frames/save-dialog-text-skin-normal.cfg \
images/frames/save-dialog-text-skin-selected.cfg \
images/frames/save-dialog-title-frame.cfg \
images/frames/selector-bl.png \
images/frames/selector-b.png \
images/frames/selector-br.png \
images/frames/selector-l.png \
images/frames/selector-m.png \
images/frames/selector-r.png \
images/frames/selector-tl.png \
images/frames/selector-t.png \
images/frames/selector-tr.png \
\
images/items/apple.png \
images/items/armor-studded-leather.png \
images/items/armour.png \
images/items/battleaxe.png \
images/items/bow.png \
images/items/chainmail.png \
images/items/chakram.png \
images/items/cloak.png \
images/items/club.png \
images/items/crossbow-human.png \
images/items/dagger-thrown-human.png \
images/items/dagger-thrown-poison-human.png \
images/items/dagger-undead.png \
images/items/fist-human.png \
images/items/gold.png \
images/items/greatsword-human.png \
images/items/greaves.png \
images/items/halberd.png \
images/items/hammer.png \
images/items/helmet.png \
images/items/helm-metal.png \
images/items/ink.png \
images/items/javelin-human.png \
images/items/kantele.png \
images/items/lamp-brass.png \
images/items/mace.png \
images/items/morning-star.png \
images/items/necklace-amber.png \
images/items/net.png \
images/items/potion-blue-big.png \
images/items/potion-blue-massive.png \
images/items/potion-blue.png \
images/items/potion-blue-tiny.png \
images/items/potion-green-major.png \
images/items/potion-green-medium.png \
images/items/potion-green-minor.png \
images/items/potion-green-moderate.png \
images/items/potion-red-huge.png \
images/items/potion-red-large.png \
images/items/potion-red-medium.png \
images/items/potion-red-minor.png \
images/items/ring.png \
images/items/sabre-human.png \
images/items/scroll.png \
images/items/shield-lavinian-gold.png \
images/items/shield.png \
images/items/shield-rectangular.png \
images/items/sling.png \
images/items/spear.png \
images/items/sword-flaming.png \
images/items/sword-human.png \
images/items/sword-paladin.png \
images/items/torch.png \
images/items/tunic.png \
images/items/whip.png \
\
images/portraits/adelvia-bar.png \
images/portraits/Adelvia.png \
images/portraits/callieh-bar.png \
images/portraits/Callieh.png \
images/portraits/ghan-bar.png \
images/portraits/Ghan.png \
images/portraits/headmaster-bar.png \
images/portraits/Headmaster.png \
images/portraits/jael-bar.png \
images/portraits/Jael.png \
images/portraits/karedos-bar.png \
images/portraits/Karedos.png \
images/portraits/marcus.png \
images/portraits/peasant.png \
images/portraits/simell-bar.png \
images/portraits/Simell.png \
images/portraits/talin-bar.png \
images/portraits/talin.png \
images/portraits/tobe-bar.png \
images/portraits/tobe.png \
images/portraits/vurgans-bar.png \
images/portraits/Vurgans.png \
\
images/terrain/alpha-mask.png \
images/terrain/alpha.png \
images/terrain/cave-01.png \
images/terrain/cave-02.png \
images/terrain/cave-03.png \
images/terrain/cave-04.png \
images/terrain/cave-05.png \
images/terrain/cave-06.png \
images/terrain/cliff-cave.png \
images/terrain/cliff-ice-partial.png \
images/terrain/cliff-ice.png \
images/terrain/cliff.png \
images/terrain/cliff-water-1.png \
images/terrain/cliff-water-2.png \
images/terrain/cliff-water-3.png \
images/terrain/cliff-water-4.png \
images/terrain/cliff-water-5.png \
images/terrain/cliff-water-6.png \
images/terrain/cliff-water-7.png \
images/terrain/cliff-water-8.png \
images/terrain/cliff-water.png \
images/terrain/cobbles-01.png \
images/terrain/cobbles-02.png \
images/terrain/cobbles-03.png \
images/terrain/cobbles-snow-01.png \
images/terrain/cobbles-snow-02.png \
images/terrain/dirt-01.png \
images/terrain/dirt-02.png \
images/terrain/dirt-03.png \
images/terrain/dirt-04.png \
images/terrain/forest-01.png \
images/terrain/grass-dry-01.png \
images/terrain/grass-dry-02.png \
images/terrain/grass-dry-03.png \
images/terrain/grass-green-01.png \
images/terrain/grass-green-02.png \
images/terrain/grass-green-03.png \
images/terrain/grass-green-04.png \
images/terrain/rock-brown-01.png \
images/terrain/rock-brown-02.png \
images/terrain/rock-brown-03.png \
images/terrain/rock-brown-04.png \
images/terrain/rock-brown-05.png \
images/terrain/rock-brown-06.png \
images/terrain/rock-brown-hole-01.png \
images/terrain/rock-brown-hole-02.png \
images/terrain/rock-brown-snow-01.png \
images/terrain/rock-brown-snow-02.png \
images/terrain/rock-brown-snow-03.png \
images/terrain/sand-01.png \
images/terrain/sand-02.png \
images/terrain/sand-03.png \
images/terrain/snow-01.png \
images/terrain/snow-02.png \
images/terrain/snow-03.png \
images/terrain/snow-04.png \
images/terrain/void.png \
images/terrain/water-01.png \
images/terrain/water-02.png \
images/terrain/water-03.png \
images/terrain/water-04.png \
images/terrain/water-deep-01.png \
images/terrain/water-deep-02.png \
images/terrain/water-deep-03.png \
images/terrain/water-deep-04.png \
\
images/units/adelvia.png \
images/units/bowman.png \
images/units/callieh.png \
images/units/cavalier.png \
images/units/cavalryman.png \
images/units/cavespider.png \
images/units/cuttlefish.png \
images/units/dragoon.png \
images/units/duelist.png \
images/units/fencer.png \
images/units/general.png \
images/units/ghan.png \
images/units/goblin-bowman.png \
images/units/grand-knight.png \
images/units/grunt.png \
images/units/halberdier.png \
images/units/heavyinfantry.png \
images/units/horseman.png \
images/units/impaler.png \
images/units/jael.png \
images/units/javelineer.png \
images/units/knight.png \
images/units/lancer.png \
images/units/lieutenant.png \
images/units/longbowman.png \
images/units/marshal.png \
images/units/master-at-arms.png \
images/units/masterbowman.png \
images/units/orc-archer.png \
images/units/peasant.png \
images/units/rouser.png \
images/units/royalguard.png \
images/units/sergeant.png \
images/units/siegetrooper.png \
images/units/simell.png \
images/units/spearman.png \
images/units/swordsman.png \
images/units/townsman.png \
images/units/vurgans.png \
images/units/wolf.png \
images/units/wolf-rider.png \
images/units/xbowman.png \
\
model-sources/blender/colorCube.blend \
model-sources/blender/fountain1.blend \
model-sources/blender/male-base.blend \
model-sources/blender/suzanne.blend \
model-sources/blender/talin.blend \
model-sources/sketchup/arrow.skp \
model-sources/sketchup/bridge.skp \
model-sources/sketchup/cave-entrace.skp \
model-sources/sketchup/tower.skp \
\
data/big-cave.cfg \
data/cave-small.cfg \
data/character_generators.cfg \
data/items.cfg \
data/rules.cfg \
data/scenario.cfg \
data/skills.cfg \
data/terrain.cfg \
data/town-felson.cfg \
data/town-isolt.cfg \
data/town-telfa.cfg \
data/translate.cfg \
\
data/maps/cave1 \
data/maps/cave2 \
data/maps/cave-small \
data/maps/felson \
data/maps/island1 \
data/maps/island-big \
data/maps/isolt \
data/maps/telfa \
\
arrow.dae \
bridge.dae \
cave-entrance.dae \
colorCube.dae \
fountain1.dae \
FreeSans.ttf \
house2.3d \
house.3d \
male-base.dae \
suzanne.dae \
talin.3ds \
tower.dae \
tree2.3d \
tree.3d

dist_doc_DATA=LICENSE README
