noinst_LIBRARIES=libsilvertree.a
bin_PROGRAMS=silvertreerpg
silvertreerpg_SOURCES=main.cpp $(SHARED_SOURCES)
silvertreerpg_LDADD=libsilvertree.a
AM_CPPFLAGS = -DDATADIR=\"$(pkgdatadir)\"
AM_CXXFLAGS = -Wall -Werror -Wno-sign-compare -Wno-switch -Wno-switch-enum

if WANT_AUDIO
silvertreerpg_SOURCES +=\
audio/audio.cpp \
audio/mpg123.cpp \
audio/openal.cpp \
audio/openalc.cpp \
\
audio/audio.hpp \
audio/mpg123.hpp \
audio/openal.hpp \
audio/openalc.hpp 
endif

SUBDIRS=. editor

libsilvertree_a_SOURCES=\
base_terrain_fwd.hpp \
base_terrain.hpp \
battle_character_fwd.hpp \
battle_character.hpp \
battle_character_npc.hpp \
battle_character_pc.hpp \
battle.hpp \
battle_map_generator.hpp \
battle_menu_fwd.hpp \
battle_menu.hpp \
battle_missile.hpp \
battle_modification.hpp \
battle_move_fwd.hpp \
battle_move.hpp \
button.hpp \
callback.hpp \
camera_controller.hpp \
camera.hpp \
character_equip_dialog.hpp \
character_fwd.hpp \
character_generator.hpp \
character.hpp \
character_status_dialog.hpp \
dialog.hpp \
display_list.hpp \
encounter.hpp \
equipment.hpp \
event_handler.hpp \
filesystem.hpp \
floating_label.hpp \
foreach.hpp \
formatter.hpp \
formula_callable_fwd.hpp \
formula_callable.hpp \
formula_fwd.hpp \
formula.hpp \
formula_registry.hpp \
formula_tokenizer.hpp \
frame.hpp \
frame_rate_utils.hpp \
frustum.hpp \
game_bar.hpp \
gamemap.hpp \
game_persistence.hpp \
game_time.hpp \
global_game_state.hpp \
graphics_logic.hpp \
grid_widget_fwd.hpp \
grid_widget.hpp \
gui_core.hpp \
image_widget_fwd.hpp \
image_widget.hpp \
initiative_bar.hpp \
initiative_bar_fwd.hpp \
input.hpp \
item_display_dialog.hpp \
item_fwd.hpp \
item.hpp \
keyboard.hpp \
label.hpp \
learn_skills_dialog.hpp \
location_fwd.hpp \
location_tracker.hpp \
map_avatar.hpp \
map_object.hpp \
map_selection.hpp \
map_utils.hpp \
material.hpp \
message_dialog.hpp \
mini_stats_dialog.hpp \
model_fwd.hpp \
model.hpp \
npc_party.hpp \
parse3ds.hpp \
parseark.hpp \
parsedae.hpp \
particle_emitter_fwd.hpp \
particle_emitter.hpp \
particle.hpp \
particle_system.hpp \
party_fwd.hpp \
party.hpp \
party_status_dialog.hpp \
pathfind.hpp \
pc_party.hpp \
post_battle_dialog.hpp \
preferences.hpp \
raster.hpp \
reference_counted_object.hpp \
renderer.hpp \
scoped_resource.hpp \
sdl_algo.hpp \
settlement_fwd.hpp \
settlement.hpp \
shop_dialog.hpp \
skill_dialog.hpp \
skill_fwd.hpp \
skill.hpp \
slider.hpp \
status_bars_widget.hpp \
string_utils.hpp \
surface_cache.hpp \
surface.hpp \
terrain_feature_fwd.hpp \
terrain_feature.hpp \
text.hpp \
text_gui.hpp \
texture.hpp \
tile.hpp \
tile_logic.hpp \
time_cost_widget.hpp \
titlescreen.cpp \
titlescreen.hpp \
tooltip.hpp \
tracks.hpp \
translate.hpp \
ttf_text.hpp \
unicode.hpp \
util.hpp \
variant.hpp \
widget.hpp \
wml_command_fwd.hpp \
wml_command.hpp \
wml_node_fwd.hpp \
wml_node.hpp \
wml_parser.hpp \
wml_utils.hpp \
wml_writer.hpp \
world_fwd.hpp \
world.hpp \
tinyxml/tinyxml.h \
zoom_map_generator.hpp \
\
base_terrain.cpp \
battle_character.cpp \
battle_character_npc.cpp \
battle_character_pc.cpp \
battle.cpp \
battle_map_generator.cpp \
battle_menu.cpp \
battle_missile.cpp \
battle_modification.cpp \
battle_move.cpp \
button.cpp \
camera_controller.cpp \
camera.cpp \
character.cpp \
character_equip_dialog.cpp \
character_generator.cpp \
character_status_dialog.cpp \
dialog.cpp \
display_list.cpp \
encounter.cpp \
equipment.cpp \
event_handler.cpp \
filesystem.cpp \
floating_label.cpp \
formula.cpp \
formula_registry.cpp \
formula_tokenizer.cpp \
frame.cpp \
frame_manager.cpp \
frustum.cpp \
game_bar.cpp \
gamemap.cpp \
game_persistence.cpp \
game_time.cpp \
global_game_state.cpp \
graphics_logic.cpp \
grid_widget.cpp \
gui_core.cpp \
image_widget.cpp \
initiative_bar.cpp \
input.cpp \
item.cpp \
item_display_dialog.cpp \
keyboard.cpp \
label.cpp \
learn_skills_dialog.cpp \
map_avatar.cpp \
map_selection.cpp \
material.cpp \
message_dialog.cpp \
mini_stats_dialog.cpp \
model.cpp \
npc_party.cpp \
parse3ds.cpp \
parseark.cpp \
parsedae.cpp \
particle.cpp \
particle_emitter.cpp \
particle_system.cpp \
party.cpp \
party_status_dialog.cpp \
pathfind.cpp \
pc_party.cpp \
post_battle_dialog.cpp \
preferences.cpp \
raster.cpp \
renderer.cpp \
sdl_algo.cpp \
settlement.cpp \
shop_dialog.cpp \
skill.cpp \
skill_dialog.cpp \
slider.cpp \
status_bars_widget.cpp \
string_utils.cpp \
surface_cache.cpp \
surface.cpp \
terrain_feature.cpp \
text.cpp \
text_gui.cpp \
texture.cpp \
tile.cpp \
tile_logic.cpp \
tooltip.cpp \
tracks.cpp  \
translate.cpp \
ttf_text.cpp \
unicode.cpp \
variant.cpp \
widget.cpp \
wml_command.cpp \
wml_node.cpp \
wml_parser.cpp \
wml_utils.cpp \
wml_writer.cpp \
world.cpp \
tinyxml/tinyxml.cpp \
tinyxml/tinyxmlerror.cpp \
tinyxml/tinyxmlparser.cpp \
zoom_map_generator.cpp

if HAVE_PANGO
libsilvertree_a_SOURCES += \
pango_text.hpp \
\
pango_text.cpp
endif
